/* Noun */ separated "wasting away" and "tuberculosis" senses <consumption#5217284>

--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -10,7 +10,8 @@
 #:''The fire's consumption of the forest caused ecological changes.''
 # The amount [[consume|consumed]].  
 #:''gross national consumption''
-# {{pathology|obsolete}} The wasting-away of the human body through disease, later specifically applied to [[pulmonary tuberculosis]].
+# {{pathology}} The wasting-away of the human body through disease.
+# {{pathology|obsolete}} [[pulmonary tuberculosis]].
 
 ====Translations====
 {{trans-top|the act of consuming something}}
@@ -45,16 +46,13 @@
 {{trans-mid}}
 {{trans-bottom}}
 
+{{trans-see|pulmonary tuberculosis}}
+
 {{checktrans-top}}
-* {{ttbc|Bulgarian}}: [[туберкулоза]] {{f}}
-* {{ttbc|Catalan}}: [[tuberculosi]]
-* {{ttbc|Czech}}: [[tuberkulóza]] {{f}}, [[souchotiny]]
-* {{ttbc|French}}: [[tuberculose]] {{f}}
+* {{ttbc|Czech}}: [[souchotiny]]
 {{trans-mid}}
-* {{ttbc|German}}: [[Schwindsucht]] {{f}}, [[Tuberkulose]] {{f}}
+* {{ttbc|German}}: [[Schwindsucht]] {{f}}
 * {{ttbc|Russian}}: [[чахотка]] (čakhótka) {{f}}
-* {{ttbc|Turkish}}: [[tüberküloz]]
-* {{ttbc|Spanish}}: [[tuberculosis]]
 {{trans-bottom}}
 
 [[ar:consumption]]
