Reverted edits by [[Special:Contributions/76.18.170.74|76.18.170.74]] ([[User_talk:76.18.170.74|Talk]]); changed back to last version by [[User:72.140.83.46|72.140.83.46]] <micro#5222603>

--- a/en/m/micro.34067.wikitext
+++ b/en/m/micro.34067.wikitext
@@ -10,9 +10,11 @@ MY-kro
 # Shortening of '''microcomputer'''
 # Shortening of '''micromanagement'''
 
+===Noun===
+{{en-noun}}
 
 # Short form of '''[[microcomputer]]'''
-# Short form of '''ur mom
+# Short form of '''[[micromanagement]]'''
 
 [[Category:Computing]]
 
