--- a/en/m/mulcts.746924.wikitext
+++ b/en/m/mulcts.746924.wikitext
@@ -1,4 +1,3 @@
-
 ==English==
 
 ===Noun===
@@ -6,7 +5,10 @@
 
 # {{plural of|[[mulct]]}}
 
-[[Category:English plurals]]
+===Verb===
+'''{{PAGENAME}}'''
+
+#{{third-person singular of|[[mulct]]}}
 
 [[ar:mulcts]]
 [[vi:mulcts]]
