convert AGr. to etyl|grc <Ionia#5236489>

--- a/en/i/Ionia.775850.wikitext
+++ b/en/i/Ionia.775850.wikitext
@@ -1,7 +1,8 @@
 ==English==
 {{wikipedia}}
+
 ===Etymology===
-From {{AGr.}} ''[[Ἰωνία]]''.
+From {{etyl|grc}} ''[[Ἰωνία]]''.
 
 ===Proper noun===
 {{en-proper noun}}
