/* Derived terms */ grey <squirrel#5238833>

--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -95,6 +95,7 @@ From {{AF.}} ''[[esquirel]]'', from {{etyl|fro}} ''[[escurel]]'' (modern {{etyl|
 * {{ttbc|Mandarin}}: [[灰鼠]]
 
 ====Derived terms====
+* [[gray squirrel]]
 * [[red squirrel]]
 
 ===Verb===
