/* Adjective */ Finnish translation <widebodied#5240851>

--- a/en/w/widebodied.856004.wikitext
+++ b/en/w/widebodied.856004.wikitext
@@ -7,3 +7,9 @@
 
 # {{aeronautics}} An [[airliner]] that can seat more than six passengers in each row, in [[economy]] seating.
 #: '''''Widebodied''' jets, like the 747, the DC-10, and the L-1011, introduced the possibility of low-cost air travel.
+
+====Translations====
+{{top}}
+* Finnish: {{t|fi|leveärunkoinen}}
+{{mid}}
+{{bottom}}
