template -see +also <indeterminable#5241513>

--- a/en/i/indeterminable.742104.wikitext
+++ b/en/i/indeterminable.742104.wikitext
@@ -1,4 +1,4 @@
-{{see|indéterminable}}
+{{also|indéterminable}}
 ==English==
 
 ===Adjective===
@@ -8,7 +8,7 @@
 # That is incapable of being [[ascertain]]ed
 
 ====Antonyms====
-*[[determinable]]
+* [[determinable]]
 
 [[gl:indeterminable]]
 [[io:indeterminable]]
