--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -17,6 +17,7 @@
 ====Translations====
 {{trans-top|clear distilled alcoholic liquor}}
 * Albanian: [[vodkë]] {{f}}
+* Armenian: [[արաղ]] (araġ), [[օղի]] (òġi)
 * [[Basque]]: vodka
 * Bosnian: [[votka#Bosnian|votka]] {{f}}
 * Bulgarian: [[водка]] (vódka) {{f}}
