/* Translations */ <better late than never#5250926>

--- a/en/b/better late than never.746527.wikitext
+++ b/en/b/better late than never.746527.wikitext
@@ -20,13 +20,14 @@ The earliest record of the phrase ''better late than never'' comes from around 2
 * Czech: {{t-|cs|lepší pozdě než nikdy}}
 * Danish: {{t|da|bedre sent end aldrig}}
 * Dutch: {{t|nl|beter laat dan nooit}}
-{{trans-mid}}
 * Esperanto: {{t|eo|pli bone malfrue ol neniam|xs=Esperanto}}
+{{trans-mid}}
 * French: {{t|fr|mieux vaut tard que jamais}}
 * German: {{t|de|besser spät als nie}}
 * Italian: {{t|it|meglio tardi che mai}}
 * Portuguese: {{t-|pt|antes tarde do que nunca}}
-* Spanish: {{t|es|más vale tarde que nunca|nunca es tarde si la dicha es buena}}
+* Russian: [[лучше поздно, чем никогда]] (lúčše pózdno, čem nikogdá)
+* Spanish: {{t|es|más vale tarde que nunca}}, {{t|es|nunca es tarde si la dicha es buena}}
 * Welsh: {{t|cy|gwell hwyr na hwyrach|gwell rhywbryd na byth|xs=Welsh}}
 {{trans-bottom}}
 
