--- a/en/w/wassen.4471.wikitext
+++ b/en/w/wassen.4471.wikitext
@@ -12,14 +12,13 @@
 
 ====Conjugation====
 * {{sense|to wash|to clean}}
-{{nl-verb-conj|was|wast|waste|wasten|hebben|gewassen}}
+{{nl-verb-table|was|wast|waste|wasten|gewassen}}
 
 * {{sense|to grow|to rise|to increase}}
-{{nl-verb-conj|was|wast|wies|wiesen|hebben|gewassen}}
+{{nl-verb-table|was|wast|wies|wiesen|gewassen}}
 
 * {{sense|to rub wax on something}}
-{{nl-verb-conj|was|wast|waste|wasten|hebben|gewast}}
-
+{{nl-verb-table|was|wast|waste|wasten|gewast}}
 
 ====Derived terms====
 {{top4}}
