--- a/en/z/Zapotec.775464.wikitext
+++ b/en/z/Zapotec.775464.wikitext
@@ -11,6 +11,7 @@ From Spanish ''[[zapoteca]]'', from Nahuatl ''[[Tzapotecah|Tzapotēcah]]'', plur
 
 ====Translations====
 {{trans-top|member of indigenous people of Mexico}}
+*French: {{t-|fr|Zapothèque}}
 * [[Classical Nahuatl]]: [[Tzapotecatl]]
 {{trans-mid}}
 * Spanish: [[zapoteca]] {{m}}
@@ -35,6 +36,7 @@ From Spanish ''[[zapoteca]]'', from Nahuatl ''[[Tzapotecah|Tzapotēcah]]'', plur
 
 ====Translations====
 {{trans-top|of or relating to the Zapotec people}}
+*French: {{t|fr|zapothèque}}
 {{trans-mid}}
 {{trans-bottom}}
 
