--- a/en/-/-mancer.855704.wikitext
+++ b/en/-/-mancer.855704.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Suffix===
-'''-mancer'''
+{{infl|en|suffix|cat=suffixes|sort=mancer}}
 
 # A practitioner of a specific type of [[divination]].
 
