--- a/en/s/see stars.776097.wikitext
+++ b/en/s/see stars.776097.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Pronunciaton===
-* Homonyms: [[sea stars]]
+* Homophones: [[sea stars]]
 
 ===Verb===
 {{en-verb|inf=to [[see]] [[stars]]|[[sees]] stars|[[seeing]] stars|[[saw]] stars|[[seen]] stars}}
