moved {{also}} to prolog, template -see +also <satirises#5293340>

--- a/en/s/satirises.774830.wikitext
+++ b/en/s/satirises.774830.wikitext
@@ -1,11 +1,10 @@
+{{also|satirisés}}
 ==English==
 
 ===Verb===
 '''satirises'''
 
 # {{third-person singular of|[[satirise]]}}
-
-{{see|satirisés}}
 
 ----
 
