--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -22,7 +22,7 @@ Partly imitative, also influenced by {{term|burble}}.
 
 ====Translations====
 {{trans-top|spherically contained volume of air}}
-* Armenian: [[պղպջակ]] (pġpǰak)
+* Armenian: {{t|hy|պղպջակ|tr=pġpǰak}}
 * Czech: {{t-|cs|bublina|f}}
 * Finnish: {{t-|fi|kupla}}
 * French: {{t+|fr|bulle|f}}
@@ -56,7 +56,7 @@ Partly imitative, also influenced by {{term|burble}}.
 * Kurdish: {{t|ku|بڵق|sc=KUchar}}
 {{trans-mid}}
 * Portuguese: {{t-|pt|bolha|f}}
-* Russian: {{tr|ru|пузырь|m|sc=Cyrl|tr=puzýr'}}, {{tr|ru|пузырёк|m|sc=Cyrl|tr=puzyr'ók}}
+* Russian: {{t|ru|пузырь|m|sc=Cyrl|tr=puzýr'}}, {{t|ru|пузырёк|m|sc=Cyrl|tr=puzyr'ók}}
 * [[Telugu]]: {{t|te|బుడగ|tr=buDaga|sc=Telu}}
 {{trans-bottom}}
 
@@ -127,9 +127,9 @@ Partly imitative, also influenced by {{term|burble}}.
 {{trans-see|to cry, weep|weep}}
 
 ====References====
-{{R:Dobson & Irwin Newcastle 1970}}
-{{R:New Geordie Dictionary 1987}}
-{{R:Northeast Dialect 2005}}
+* {{R:Dobson & Irwin Newcastle 1970}}
+* {{R:New Geordie Dictionary 1987}}
+* {{R:Northeast Dialect 2005}}
 
 [[ar:bubble]]
 [[el:bubble]]
