--- a/en/e/embassies.802745.wikitext
+++ b/en/e/embassies.802745.wikitext
@@ -7,4 +7,8 @@
 
 [[Category:English plurals ending in "-ies"]]
 
+[[ar:embassies]]
 [[fr:embassies]]
+[[hu:embassies]]
+[[no:embassies]]
+[[vi:embassies]]
