--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -25,6 +25,7 @@ From {{OF.}} ''[[plege]]'' (French: ''[[pleige]]'').
 * Russian: [[обещать]], [[заверять]], [[клясться]]
 * Serbian: [[zaloga]], [[zavet]]
 * Slovene: [[zapriseči]], [[zavezati se]], [[zaobljubiti se]]
+* Spanish: {{t|es|prometer}}
 {{trans-bottom}}
 
 {{trans-top|To deposit something as a security; to pawn}}
