+rhymes template, convert OF. to etyl|fro <pledge#5330916>

--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -4,10 +4,10 @@
 ===Pronunciation===
 * {{audio|en-us-pledge.ogg|Audio (US)}}
 
-*: Rhymes: [[Rhymes:English:-ɛdʒ|-ɛdʒ]]
+*: {{rhymes|ɛdʒ}}
 
 ===Etymology===
-From {{OF.}} ''[[plege]]'' (French: ''[[pleige]]'').
+From {{etyl|fro}} ''[[plege]]'' (French: ''[[pleige]]'').
 
 ===Verb===
 {{en-verb|pledg|ing}}
