/* Noun */ Finnish translations <pig#5332946>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -15,7 +15,7 @@
 # (''specifically'') A young swine, a [[piglet]].
 # {{uncountable}} The [[edible]] [[meat]] of such an animal; [[pork]].
 #:* Some religions prohibit their adherents from eating '''pig'''.
-# A [[greedy]] person; someone who overeats or eats rapidly and noisily.
+# Someone who overeats or eats rapidly and noisily.
 #:* You gluttonous '''pig'''! Now that you've eaten all the cupcakes, there will be none for the party!
 # A [[nasty]] or [[disgusting]] person.
 #:* She considered him a '''pig''' as he invariably stared at her bosom when they talked.
@@ -62,7 +62,7 @@
 * Esperanto: [[porko]]
 * Estonian: [[siga#Estonian|siga]]
 * Faroese: [[svín]] {{n}}
-* Finnish: [[sika#Finnish|sika]]
+* Finnish: {{t|fi|sika}}
 * French: [[cochon]] {{m}}, [[porc#French|porc]] {{m}}
 * [[Friulian]]: [[purcit]] {{m}}
 * [[Galician]]: [[porco#Gallegan|porco]] {{m}}
@@ -128,9 +128,13 @@
 * [[West Frisian]]: [[baarch]] {{c}}
 {{trans-bottom}}
 
-{{trans-top|greedy person}}
+{{trans-see|piglet}}
+
+{{trans-see|pork}}
+
+{{trans-top|someone who overeats or eats rapidly}}
 * [[Afrikaans]]: [[vark]]
-* Finnish: [[ahmatti]]
+* Finnish: {{t|fi|porsas}}, {{t|fi|sika}}
 * French: [[cochon]] {{m}}, [[porc#French|porc]] {{m}}
 {{trans-mid}}
 * Italian: [[porco]] {{m}}, [[maiale]] {{m}}
@@ -140,7 +144,7 @@
 {{trans-top|nasty or disgusting person}}
 * [[Afrikaans]]: [[vark]]
 * Bosnian: [[svinja]] {{f}}
-* Finnish: [[ilkimys]]
+* Finnish: {{t|fi|sika}}
 * French: [[salaud]] {{m}}, [[cochon]] {{m}}, [[porc#French|porc]] {{m}}
 * German: [[Schwein]] {{n}}
 * Italian: [[bastardo]] {{m}}, bastarda {{f}}, [[stronzo]] {{m}}, stronza {{f}}
@@ -157,7 +161,7 @@
 {{trans-top|dirty or slovenly person}}
 * [[Afrikaans]]: [[vark]]
 * Bosnian: [[svinja]] {{f}}
-* Finnish: [[sika#Finnish|sika]], [[possu]]
+* Finnish: {{t|fi||sika}}, {{t|fi|sottapytty}}
 * French: [[cochon]] {{m}}, [[porc#French|porc]] {{m}}
 * German: [[Schwein]] {{n}}
 * Italian: [[porco]] {{m}}, [[maiale]] {{m}}
@@ -180,19 +184,23 @@
 {{trans-bottom}}
 
 {{trans-top|difficult problem}}
+* Finnish: {{t|fi|pähkinä}}
 {{trans-mid}}
 {{trans-bottom}}
 
 {{trans-top|cast metal block}}
-* Russian: [[чушка]] (čúška), [[болванка]]  (bolvánka) {{f}}
+* Finnish: {{t|fi|harkko}}
 {{trans-mid}}
+* Russian: [[чушка]] (čúška), [[болванка]]  (bolvánka) {{f}}
 {{trans-bottom}}
 
 {{trans-top|mould for a cast metal block}}
+* Finnish: {{t|fi|muotti}}
 {{trans-mid}}
 {{trans-bottom}}
 
 {{trans-top|device to clean or inspect a pipe from inside}}
+* Finnish: {{t|fi|porsas}}
 {{trans-mid}}
 {{trans-bottom}}
 
