convert AGr. to etyl|grc <epiboly#5353006>

--- a/en/e/epiboly.775580.wikitext
+++ b/en/e/epiboly.775580.wikitext
@@ -1,22 +1,24 @@
 ==English==
+
 ===Etymology===
 
-From {{AGr.}} {{term|sc=Grek|lang=el|ἐπιβολή||addition|tr=epibolé}}
+From {{etyl|grc}} {{term|sc=Grek|lang=el|ἐπιβολή||addition|tr=epibolé}}
 
 ===Pronunciation===
 
-*{{IPA|ɛˈpɪbəli}}
+* {{IPA|ɛˈpɪbəli}}
 
 ===Noun===
 {{en-noun|-}}
 {{wikipedia}}
-#{{embryology}} The expansion of one cell sheet over other cells, as takes place during [[gastrulation]].
+
+# {{embryology}} The expansion of one cell sheet over other cells, as takes place during [[gastrulation]].
 
 ====Derived terms====
-*[[epibolic]]
-*[[epibolically]]
-*[[epibolize]]
-*[[epibolization]]
+* [[epibolic]]
+* [[epibolically]]
+* [[epibolize]]
+* [[epibolization]]
 
 [[vi:epiboly]]
 [[zh:epiboly]]
