* before IPA, added lang=sco to IPA <auncient#5359907>

--- a/en/a/auncient.720009.wikitext
+++ b/en/a/auncient.720009.wikitext
@@ -1,9 +1,9 @@
 ==Scots==
 
 ===Pronunciation===
-{{IPA|/ˈanʃənt/}}
+* {{IPA|/ˈanʃənt/|lang=sco}}
 
 ===Adjective===
 {{sco-adj}}
 
-#[[ancient|Ancient]]
+# [[ancient|Ancient]]
