* before pedialite <Markovian#5367690>

--- a/en/m/Markovian.776104.wikitext
+++ b/en/m/Markovian.776104.wikitext
@@ -1,16 +1,15 @@
 ==English==
 
-
 ===Etymology===
 
 {{suffix|Markov|ian}}, named for the Russian mathematician [[w:Andrey Markov|Andrey Markov]].
 
 ===Pronunciation===
 
-*{{IPA|maɹˈkoʊviən}} {{qualifier|US}}
+* {{IPA|maɹˈkoʊviən}} {{qualifier|US}}
 
 ===Adjective===
 {{en-adj|-}}
 
-#{{statistics|of a process}} Exhibiting the [[w:Markov property|Markov property]], in which the conditional probability distribution of future states of the process, given the present state and all past states, depends only upon the present state and not on any past states.
-{{pedialite|Markov property|the Markov property}}
+# {{statistics|of a process}} Exhibiting the [[w:Markov property|Markov property]], in which the conditional probability distribution of future states of the process, given the present state and all past states, depends only upon the present state and not on any past states.
+* {{pedialite|Markov property|the Markov property}}
