convert ME. to etyl|enm, convert OE. to etyl|ang <mill#5375912>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -9,7 +9,7 @@
 * [[mil]]
 
 ===Etymology 1===
-* {{ME.}} ''[[mille]]'', {{OE.}} ''[[mylen]]''
+* {{etyl|enm}} ''[[mille]]'', {{etyl|ang}} ''[[mylen]]''
 
 ====Noun====
 {{en-noun}}
