--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -74,6 +74,7 @@ Old English ''[[þonne]]''
 * Polish: (a) [[następnie]], (a) [[potem]]
 * Portuguese: [[depois]], [[em seguida]]
 * Russian: {{t+|ru|затем|tr=zatém|sc=Cyrl}}, {{t+|ru|потом|tr=potóm|sc=Cyrl}}
+* Serbian: [[zatim]], [[potom]]
 * Slovenian: [[potem]]
 * Spanish: {{t-|es|luego}}
 * Swedish: {{t-|sv|därpå}}, {{t+|sv|sen}}, {{t+|sv|sedan}}, {{t+|sv|så}}
