--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -52,7 +52,7 @@ Old English ''[[þonne]]''
 * Portuguese: [[então]], [[naquele]] [[tempo]], [[naquela]] [[época]], [[nesse tempo]], [[nessa]] [[época]]
 * Romanian: [[atunci]]
 * Russian: {{t+|ru|тогда|tr=togdá|sc=Cyrl}}
-* Serbian: [[onda]], [[tada]]
+* Serbian: [[onda]], [[tada]], [[posle]]
 * Spanish: {{t+|es|entonces}}
 * Swedish: {{t+|sv|då}}
 * [[Telugu]]: [[అప్పుడు]] (appuDu)
