--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -2,13 +2,19 @@
 ==English==
 
 ===Pronunciation===
-* {{enPR|bĕnt}}
-* {{IPA|/bent/}}
-* {{SAMPA|/bent/}}
+* {{a|UK|US}} {{enPR|bĕnt}}, {{IPA|/bɛnt/}}, {{SAMPA|/bent/}}
 * {{audio|en-us-bent.ogg|Audio (US)}}
 *: {{rhymes|ɛnt}}
 
-===Adjective===
+===Etymology 1===
+From {{term|bend}}.
+
+====Verb====
+'''bent'''
+
+# {{past of|[[bend]]}}
+
+====Adjective====
 {{en-adj}}
 
 # Of something that is usually straight: folded.
@@ -19,11 +25,11 @@
 # {{context|slang|football}} [[inaccurate]] at [[shooting]]
 #: ''That shot was so '''bent''' it left the pitch.''
 
-====Synonyms====
+=====Synonyms=====
 * (1): [[crooked]]
 * (2): [[queer]]
 
-====Translations====
+=====Translations=====
 {{trans-top|folded}}
 * Finnish: [[taipunut]], [[taittunut]]
 * German: [[gebeugt]]
@@ -41,7 +47,7 @@
 {{trans-mid}}
 {{trans-bottom}}
 
-===Noun===
+====Noun====
 {{en-noun}}
 
 # An [[inclination]] or [[talent]].
@@ -49,10 +55,10 @@
 # A [[predisposition]] to act or react in a particular way.
 #: ''His mind was of a technical '''bent'''.''
 
-====Synonyms====
+=====Synonyms=====
 * {{sense|an inclination or talent}} [[disposition]], [[predilection]], [[proclivity]], [[propensity]]
 
-====Translations====
+=====Translations=====
 {{trans-top|inclination or talent}}
 {{trans-mid}}
 {{trans-bottom}}
@@ -69,11 +75,16 @@
 * {{ttbc|Vietnamese}}: [[thiên hướng]], [[khuynh hướng]]
 {{trans-bottom}}
 
-===Verb===
-'''bent'''
+===Etymology 2===
+Origin uncertain.  Apparently representing {{etyl|ang}} {{term||beonet-}} (attested only in place-names and personal names), cognate with Old High German {{term|binuz}} (modern German {{term|Binse||rush, reed}}).
 
-# {{past of|bend}}
+====Noun====
+{{en-noun}}
 
+# Any of various stiff or reedy [[grasses]].
+#*'''1888''', Rudyard Kipling, ‘The Strange Ride of Morrowbie Jukes’, ''The Phantom ’Rickshaw and Other Tales'', Folio Society 2005, p. 121:
+#*:Gunga Dass gave me a double handful of dried '''bents''' which I thrust down the mouth of the lair to the right of his, and followed myself, feet foremost [...].
+# A grassy area, [[grassland]].
 [[Category:1000 English basic words]]
 [[Category:English irregular past participles]]
 [[Category:English irregular simple past forms]]
