--- a/en/b/baculovirus.775629.wikitext
+++ b/en/b/baculovirus.775629.wikitext
@@ -4,7 +4,7 @@
 
 ===Etymology===
 
-{{prefix|baculo|virus}}, from {{term|lang=la|baculum||rod}}.
+{{prefix|baculo|virus}}, from {{etyl|la}} {{term|lang=la|baculum||rod}}.
 
 ===Noun===
 {{en-noun|es}}
