--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -18,7 +18,7 @@
 * Bulgarian: [[консумиране]] {{f}}, [[изразходване]] {{n}}
 * [[Catalan]]: [[consum]] {{m}}
 * Czech: [[spotřeba]] {{f}}, [[konzumace]] {{f}}
-* Dutch: [[consumptie]], [[verbruik]] {{n}}
+* Dutch: [[consumptie]] {{f}}, [[verbruik]] {{n}}
 * Finnish: [[kuluttaminen]], [[kulutus]]
 * French: [[consommer]], [[consumer]]
 * German: [[Konsum]] {{m}}, [[Verzehr]] {{m}}
@@ -26,7 +26,7 @@
 * Hebrew: [[צריכה]] (tzrikha) {{f}} (''act of consuming goods'')
 * Japanese: [[消費]] (しょうひ, shōhi)
 * Portuguese: [[consumo]] {{m}}
-* Russian: {{t|ru|потребление|n|sc=Cyrl|tr=potr'ebl'énije}}
+* Russian: {{t|ru|потребление|n|sc=Cyrl|tr=potreblénije}}
 * Spanish: [[consumir]]
 {{trans-bottom}}
 
@@ -34,12 +34,12 @@
 * Bulgarian: [[консумация]] {{f}}
 * [[Catalan]]: [[consum]] {{m}}
 * Czech: [[spotřeba]] {{f}}
-* Dutch: [[consumptie]], [[verbruik]] {{n}}
+* Dutch: [[consumptie]] {{f}}, [[verbruik]] {{n}}
 * Finnish: [[kulutus]]
 {{trans-mid}}
 * French: [[consommation]] {{f}}
 * German: [[Verbrauch]] {{m}}, [[Verbrauchswert]] {{m}}, [[Verzehr]] {{m}}
-* Russian: {{t|ru|потребление|n|sc=Cyrl|tr=potr'ebl'énije}}, {{t|ru|расход|m|sc=Cyrl|tr=rasxód}};
+* Russian: {{t|ru|потребление|n|sc=Cyrl|tr=potreblénije}}, {{t|ru|расход|m|sc=Cyrl|tr=rasxód}}
 * Spanish: [[consumo]]
 {{trans-bottom}}
 
@@ -47,7 +47,7 @@
 * Dutch: [[wegteren]] {{n}}
 * Finnish: {{t|fi|riutuminen}}
 {{trans-mid}}
-* Russian: {{t|ru|истощение|n|sc=Cyrl|tr=istoš'énije}}
+* Russian: {{t|ru|истощение|n|sc=Cyrl|tr=istoščénije}}
 {{trans-bottom}}
 
 {{trans-see|pulmonary tuberculosis}}
