/* Translations */ taos <rabbit#5411138>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -113,6 +113,7 @@ From Northern [[French]].
 * Swahili: {{t+|sw|sungura|xs=Swahili}}
 * Swedish: {{t+|sv|kanin|c}}
 * [[Tagalog]]: [[kuneho]]
+* [[Taos]]: [[pȉwéna]]
 * [[Telugu]]: [[కుందేలు]] (kumdealu)
 * Turkish: {{t+|tr|tavşan}}
 * [[Tz'utujil]]: [[umul]]
