Added Portuguese definition (verb form of [[amar]]). <amai#5422792>

--- a/en/a/amai.4232.wikitext
+++ b/en/a/amai.4232.wikitext
@@ -27,6 +27,15 @@
 
 ----
 
+==Portuguese==
+
+===Verb===
+'''amai'''
+
+# {{pt-verb form of|amar|suffix=ar|mood=imperative|number=plural|person=second-person|polarity=affirmative}}
+
+----
+
 ==Sicilian==
 
 ===Verb===
