iwiki +ko <cauliflower#5424316>

--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -67,6 +67,7 @@
 [[fr:cauliflower]]
 [[fy:cauliflower]]
 [[gl:cauliflower]]
+[[ko:cauliflower]]
 [[io:cauliflower]]
 [[it:cauliflower]]
 [[hu:cauliflower]]
