--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -20,7 +20,7 @@
 * Czech: [[spotřeba]] {{f}}, [[konzumace]] {{f}}
 * Dutch: [[consumptie]] {{f}}, [[verbruik]] {{n}}
 * Finnish: [[kuluttaminen]], [[kulutus]]
-* French: [[consommer]], [[consumer]]
+* French: [[consommation]], [[consommer]] {{m}}, [[consumer]] {{m}}
 {{trans-mid}}
 * German: [[Konsum]] {{m}}, [[Verzehr]] {{m}}
 * Hebrew: [[צריכה]] (tzrikha) {{f}} (''act of consuming goods'')
