--- a/en/l/Las Vegas.741384.wikitext
+++ b/en/l/Las Vegas.741384.wikitext
@@ -1,15 +1,17 @@
 ==English==
 {{wikipedia}}
+
 ===Etymology===
-From {{Sp.}} ''[[las]] [[vegas]]'' 'the meadows'
+From {{etyl|es}} ''[[las]] [[vegas]]'' 'the meadows'
 
 ===Proper noun===
 {{en-proper-noun}}
 
 # A desert city in [[Nevada]], USA, known for its large hotels, extravagant entertainment and dining, and [[gambling]].
 
-===Synonyms===
-*[[Vegas]]
-*[[Sin City]]
-*[[The Strip]]
+====Synonyms====
+* [[Vegas]]
+* [[Sin City]]
+* [[The Strip]]
+
 [[Category:Cities]]
