convert L. to etyl|la <multicolour#5431439>

--- a/en/m/multicolour.34081.wikitext
+++ b/en/m/multicolour.34081.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-{{L.}} {{prefix|multi|colour}}
+{{etyl|la}} {{prefix|multi|colour}}
 
 ===Alternative spellings===
 * {{i-c|Chiefly American}} [[multicolor]]
