--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -56,7 +56,7 @@ From {{etyl|enm}}, from {{etyl|ang}} ''[[þing]]''.
 * Czech: {{t+|cs|věc|f}}
 * Danish: {{t-|da|ting|c}}
 * Dutch: {{t+|nl|ding|n}}
-* {{trreq|Esperanto}}
+* Esperanto: {{t+|eo|aĵo}}
 * Estonian: {{t-|et|asi}}, {{t-|et|ese}}
 * Finnish: {{t+|fi|asia}}
 * French: [[chose]] {{f}}, [[truc]] {{m}}, [[machin]] {{m}} {{italbrac|informal}}
