/* Translations */ French is correct <whistle#5433962>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -23,6 +23,7 @@
 * Dutch: {{t+|nl|fluiten}}
 * Finnish: {{t-|fi|viheltää}}
 {{trans-mid}}
+* French: {{t|fr|siffler}}
 * Hungarian: {{t+|hu|fütyül}}
 * Russian: {{t|ru|свистеть|tr=svist'ét’|sc=Cyrl}} {{impf}}, {{t|ru|свистнуть|tr=svístnut’|sc=Cyrl}} {{pf}}
 * Serbian: {{t|sr|zvižduk|m}}
@@ -45,7 +46,6 @@
 * {{ttbc|Catalan}}: [[xiular]]
 * {{ttbc|Croatian}}: [[zviždati]]
 * {{ttbc|Esperanto}}: [[fajfi]]
-* {{ttbc|French}}: [[siffler]]
 * {{ttbc|Indonesian}}: [[siul|bersiul]]
 {{checktrans-mid}}
 * {{ttbc|Polish}}: [[gwizdać]], [[świstać]]
