--- a/en/d/durva.855097.wikitext
+++ b/en/d/durva.855097.wikitext
@@ -1,5 +1,8 @@
 ==Hungarian==
 
+===Etymology===
+Of unknown origin.
+
 ===Pronunciation===
 *{{IPA|/ˈdurvɒ/|lang=hu}}
 *{{hyphenation|dur|va}}
@@ -11,4 +14,5 @@
 # [[coarse]] (of inferior quality)
 # [[brusque]]
 
+[[Category:hu:Unknown etymology]]
 [[hu:durva]]
