template -see +also <foo-foo#5450446>

--- a/en/f/foo-foo.855761.wikitext
+++ b/en/f/foo-foo.855761.wikitext
@@ -1,15 +1,14 @@
-{{see|fufú}}
-
+{{also|fufú}}
 ==English==
 
 ===Alternative spellings===
 {{wikipedia|fufu|foo-foo}}
-*[[foofoo]]
-*[[fufu]]
+* [[foofoo]]
+* [[fufu]]
 
 ===Noun===
 {{en-noun|-}}
 
 # A [[dish]] of [[boil]]ed, [[mash]]ed [[yam]]s, [[plantain]], or other [[starchy]] [[vegetable]]s, served in [[equatorial]] [[Africa]] and the [[Caribbean]].
-#*'''1958''', [[w:Chinua_Achebe|Chinua Achebe]], ''Things Fall Apart'', ch 11,
-#*:Ezinma and her mother sat on a mat on the floor after their supper of yam '''foo-foo''' and bitter-leaf soup.
+#* '''1958''', [[w:Chinua_Achebe|Chinua Achebe]], ''Things Fall Apart'', ch 11,
+#*: Ezinma and her mother sat on a mat on the floor after their supper of yam '''foo-foo''' and bitter-leaf soup.
