--- a/en/t/Transnistria.741376.wikitext
+++ b/en/t/Transnistria.741376.wikitext
@@ -161,7 +161,7 @@ Literally "beyond the river Dniester".
 {{wikipedia|lang=ro}}
 
 ===Pronunciation===
-{{IPA|[trans'ni.stri.a]|lang=ro}}
+* {{IPA|[trans'ni.stri.a]|lang=ro}}
 
 ===Proper noun===
 {{infl|ro|proper noun|g=f}}
