--- a/en/d/DOB.26214.wikitext
+++ b/en/d/DOB.26214.wikitext
@@ -1,8 +1,9 @@
-{{see|dob}}
+{{also|dob}}
 ==English==
 
 ==={{initialism}}===
 '''DOB'''
+
 # Date of Birth
 # Daughters of Bilitis. The first organized and successful Lesbian liberation organization in the United States.
 
