--- a/en/f/FM.26231.wikitext
+++ b/en/f/FM.26231.wikitext
@@ -1,4 +1,4 @@
-{{see|fm|Fm|.fm}}
+{{also|fm|Fm|.fm}}
 ==English==
 
 ==={{initialism}}===
@@ -8,7 +8,8 @@
 
 ==={{abbreviation}}===
 '''FM'''
-#{{geography}} [[Federated States of Micronesia]], a member state of the [[United Nations]].
+
+# {{geography}} [[Federated States of Micronesia]], a member state of the [[United Nations]].
 
 [[de:FM]]
 [[et:FM]]
