+ synonym [[carillonneur]] <carillonist#5463827>

--- a/en/c/carillonist.855182.wikitext
+++ b/en/c/carillonist.855182.wikitext
@@ -5,7 +5,10 @@
 
 ===Noun===
 {{en-noun}}
-# One who plays the [[carillon]]
+# One who plays the [[carillon]].
+
+====Synonyms====
+* [[carillonneur]]
 
 ====Translations====
 * Serbian: [[zvonar]] {{m}}
