--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -25,6 +25,7 @@ English since 1613, from French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek
 
 ====Synonyms====
 * See also [[Wikisaurus:supposition]]
+a shaka laka
 
 ====Derived terms====
 {{rel-top3|terms derived from theory}}
