--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -20,7 +20,7 @@ From {{etyl|enm}} {{term|benden}} < {{etyl|ang}} {{term|bendan}} to bind or bend
 # {{context|transitive|nautical}} To [[tie]], as in [[securing]] a line to a [[cleat]]; to [[shackle]] a [[chain]] to an [[anchor]]; make [[fast]].
 #* '''''Bend''' the sail to the yard.''
 # {{context|transitive|music}} To smoothly change the pitch of a note.
-#* ''You should '''bend''' the G sligthly sharp in the next measure.''
+#* ''You should '''bend''' the G slightly sharp in the next measure.''
 # {{context|intransitive|nautical}} To [[swing]] the [[body]] when [[rowing]].
 # {{intransitive}}  To become [[curve]]d.
 #* ''Look at the trees '''bending''' in the wind.''
