--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -74,7 +74,7 @@
 * Dutch: {{t|nl|fluitje|n}}
 * Finnish: {{t+|fi|pilli}}
 * Hungarian: {{t-|hu|síp}}
-* Italian: {{t|fischietto|m}}
+* Italian: {{t|it|fischietto|m}}
 {{trans-mid}}
 * Japanese: {{t+|ja|笛|tr=[[ふえ]], fue|sc=Jpan}}
 * Polish: {{t|pl|gwizdek|m}}
