--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -5,9 +5,7 @@
 From the [[homographic]] [[w:Grammatical case|case]] endings of the [[nominative]], [[accusative]], and [[vocative]] forms of numerous [[Appendix:Latin second declension#Neuter|neuter]] {{etyl|la}} [[Appendix:Latin second declension#Neuter|second declension]] nouns.
 
 ===Pronunciation===
-* {{a|[[w:Latin spelling and pronunciation|Latin]]}}<sup>1</sup> {{IPA|/—um/}}
-* {{a|Latin}}<sup>2</sup> {{IPA|/—ũ/}}
-* {{a|UK}} {{IPA|/—əm/}}
+* {{a|UK}} {{IPA|/əm/}}
 
 ===Suffix===
 '''-um''' (''plural'' '''[[-a#English|-a]]''')
