--- a/en/a/amai.4232.wikitext
+++ b/en/a/amai.4232.wikitext
@@ -32,7 +32,7 @@
 ===Verb===
 '''amai'''
 
-# {{pt-verb form of|amar|suffix=ar|mood=imperative|number=plural|person=second-person|polarity=affirmative}}
+# {{pt-verb form of|amar|ar|imperative|number=plural|person=second|polarity=affirmative}}
 
 ----
 
