===Hdr===, [[User:Connel MacKenzie/Format|fmt]] fixed typo resolved nl ttbc <bet#5471442>

--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -9,7 +9,7 @@
 ===Noun===
 {{en-noun}}
 
-# A [[wager]], an agreement between two parties that a stake (usually money) will be paid by the loser to the winner &nbsp; the one who correctly forcast the outcome of an event.
+# A [[wager]], an agreement between two parties that a stake (usually money) will be paid by the loser to the winner &nbsp; the one who correctly forecast the outcome of an event.
 # A degree of [[certainty]].
 #: ''It’s a good '''bet''' that it will rain tomorrow.''
 #: ''It’s an even '''bet''' that Jim will come top of the maths test tomorrow''
@@ -35,10 +35,10 @@
 {{trans-bottom}}
 
 {{trans-top|A degree of certainty}}
-* Dutch: [[waarschijnlijkheid]] {{f}}
-* Finnish: {{t+|fi|mahdollisuus}}
+*Dutch: {{t|nl|waarschijnlijkheid|f}}
+*Finnish: {{t+|fi|mahdollisuus}}
 {{trans-mid}}
-* German: [[Bestimmtheit]] {{f}}
+*German: {{t|de|Bestimmtheit|f}}
 {{trans-bottom}}
 
 {{checktrans-top}}
@@ -56,35 +56,34 @@
 
 ====Translations====
 {{trans-top|To make a guess about the outcome of an event}}
-* [[Breton]]: [[klaoustreañ]]
-* Czech: [[vsadit]], [[vsadit]] se
-* Dutch: [[gokken]]
-* Finnish: [[lyödä vetoa]], [[veikata]]
-* French: {{t+|fr|parier}}
-* German: {{t-|de|wetten}}
-* Greek: [[βάζω στοίχημα οτί]], [[στοιχηματίζω]] [stiˌçimaˈtizo̞]
-* Hebrew: [[להתערב]] (le'hitarev)
+*[[Breton]]: {{t|br|klaoustreañ}}
+*Czech: {{t|cs|vsadit}}, {{t|cs|vsadit}} se
+*Dutch: {{t|nl|gokken}}, {{t|nl|wedden}}
+*Finnish: {{t|fi|lyödä vetoa}}, {{t|fi|veikata}}
+*French: {{t+|fr|parier}}
+*German: {{t-|de|wetten}}
+*Greek: {{t|el|βάζω στοίχημα οτί}}, {{t|el|στοιχηματίζω}} [stiˌçimaˈtizo̞]
+*Hebrew: {{t|he|להתערב}} (le'hitarev)
 {{trans-mid}}
-* Indonesian: {{t-|id|taruh|alt=mempertaruhkan|xs=Indonesian}}
-* Japanese: [[賭ける]] ([[かける]], kakeru)
-* Latvian: [[derēt]]
-* Polish: {{t|pl|postawić}}, {{t|pl|zakładać się}}
-* Slovak: [[staviť]], [[vsadiť]], [[stávkovať]]
-* Slovene: {{t-|sl|staviti}}
-* Swedish: {{t-|sv|slå vad}}
+*Indonesian: {{t-|id|taruh}}
+*Japanese: {{t|ja|賭ける}} ([[かける]], kakeru)
+*Latvian: {{t|lv|derēt}}
+*Polish: {{t|pl|postawić}}, {{t|pl|zakładać się}}
+*Slovak: {{t|sk|staviť}}, {{t|sk|vsadiť}}, {{t|sk|stávkovať}}
+*Slovenian: {{t|sl|staviti}}
+*Swedish: {{t|sv|slå vad}}
 {{trans-bottom}}
 
 {{trans-top|To be sure of something}}
-* Czech: [[vsadit]] se
-* Dutch: [[er op kunnen rekenen]]
-* Latvian: [[būt]] [[pārliecināts|pārliecinātam]]
+*Czech: {{t|cs|vsadit}} se
+*Dutch: {{t|nl|er op kunnen rekenen}}, {{t|nl|er van op aan kunnen}}
+*Latvian: {{t|lv|būt}} [[pārliecināts|pārliecinātam]]
 {{trans-mid}}
-* Polish: {{t|pl|stawiać na}}
-* Slovak: [[staviť]] sa
+*Polish: {{t|pl|stawiać na}}
+*Slovak: {{t|sk|staviť}} sa
 {{trans-bottom}}
 
 {{checktrans-top}}
-* {{ttbc|Dutch}}: [[van op aan kunnen]]
 * {{ttbc|Indonesian}}: [[taruh|bertaruh]]
 * {{ttbc|Latvian}}: [[nosaukt]] [[likme|likmi]]
 * {{ttbc|Wu}}:
@@ -121,7 +120,7 @@
 
 ==Dutch==
 
-===Verb form===
+===Verb===
 '''bet'''
 
 # singular present tense of [[betten]]
