--- a/en/g/grognard.855664.wikitext
+++ b/en/g/grognard.855664.wikitext
@@ -7,7 +7,7 @@
 * ''slang'' for someone who enjoys playing [[wargaming#Board wargaming|board wargames]]. This use is supposed to have been coined by John Young in the early 1970s while employed by [[Simulations Publications]], Inc. Originally this term referred to the "old guard" of gamers who were playing military board games prior to 1969.
 * Inside the computer game development industry, the term '''grognard''' is used to name fans who will buy every game released in a certain genre of game ([[Real-time strategy|RTS]], [[Computer role-playing game|RPG]], etc.). These dedicated game players are often viewed as a blessing and a curse, as they will ensure a certain minimum level in sales, but they will also be the most critical of any mistakes or [[Computer bug|bugs]] in the game.
 * In the board game, [[role-playing game]], [[miniature wargaming]] and computer game genres, grognard may refer to an ultra-hardcore gamer, seeking reality and assembling detailed tables of probabilities and statistics. Grognard may also refer to someone with a detailed knowledge of real world history without necessarily being interested in becoming a good player or having a detailed knowledge of game mechanics or play. Grognard can also refer to a player who prefers an out-of-print edition of a game to the currently-printed edition.
-* The term "grognard capture" extends from this idea of the ultra-hardcore gamer to the consideration of how such gamers' expectations regarding the nature of a game, sequel, or new edition in any of the above genres must be balanced against the difficulties that this may cause new players unfamiliar with the genre, game, or player culture; grognard capture occurs when balance is not met and the new work begins excluding the possibility of new players.  This phrase was coined and later popularized by [[Greg Costikyan]].<ref>[http://www.costik.com/weblog/2003/08/grognard-capture.html Grognard Capture]</ref>
+* "grognard capture" is the [[event horizon]] beyond which a game series (a game and its supplements and sequels) irrecoverably becomes too inaccessibly complex for new players.  Beyond that point, the designers cannot simplify the game, because they are too dependant on existing players (grognards).  Nor can they attract new players who would dilute the influence of the grognards, because the game is too complex.  The game has been 'captured' by the 'grognards', and is, in the long run, doomed.  The phrase was coined and popularized by [[Greg Costikyan]].<ref>[http://www.costik.com/weblog/2003/08/grognard-capture.html Grognard Capture]</ref>
 
 ==References==
 {{Reflist}}
