--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -29,7 +29,7 @@
 * Polish: {{t+|pl|zakład|m}}
 * Serbian: [[opklada]] {{m}}
 * Slovene: {{t-|sl|stava|f}}
-* Spanisy: {{t-|es|apuesta}}
+* Spanish: {{t-|es|apuesta}}
 * Swedish: [[vad#Noun|vad]] {{n}}
 * [[Telugu]]: [[పంతం]] (pantam)
 {{trans-bottom}}
