--- a/en/t/teloi.774668.wikitext
+++ b/en/t/teloi.774668.wikitext
@@ -3,4 +3,4 @@
 ===Verb===
 '''teloi'''
 
-# {{fi-form of|teloa|type=verb|pr=third-person|pl=singular|mood=indicative|tense=past}}
+# {{fi-form of|[[teloa]]|type=verb|pr=third-person|pl=singular|mood=indicative|tense=past}}
