trans link [[Crimean Tatar]] <whistle#5482067>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -18,7 +18,7 @@
 ====Translations====
 {{trans-top|to produce a whistling sound}}
 * [[Breton]]: {{t|br|c'hwitellat|xs=Breton}}
-* Crimean Tatar: {{t|crh|sızğırmaq}}
+* [[Crimean Tatar]]: {{t|crh|sızğırmaq}}
 * Czech: {{t-|cs|pískat}}
 * Danish: {{t-|da|fløjte}}, {{t|da|hvisle}}
 * Dutch: {{t+|nl|fluiten}}
