template -see +also <NSA#5484132>

--- a/en/n/NSA.26206.wikitext
+++ b/en/n/NSA.26206.wikitext
@@ -1,5 +1,4 @@
-{{see|-nsa|-nsä}}
-
+{{also|-nsa|-nsä}}
 ==English==
 
 ==={{initialism}}===
@@ -10,7 +9,9 @@
 # [[no strings attached|No strings attached]].
 
 ----
+
 ==Czech==
+
 ==={{acronym|Czech}}===
 '''NSA'''
 
@@ -20,4 +21,5 @@
 * [[nesteroidní antiflogistikum]] {{n}}
 
 [[Category:Organizations]]
+
 [[fr:NSA]]
