--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -5,16 +5,20 @@
 * {{rhymes|æmbəl}}
 * Homophones: [[gambol]]
 
+===Etymology===
+From {{OE.}} [[gamenian]] 'to play', either via a dialectal survival of {{ME.}} [[gammlen]], a variant of [[gamenen]] 'to play, jest, be merry', or via a derivative of [[gamel]] 'to play games'
+
 ===Noun===
 {{wikipedia}}
 {{en-noun}}
 
-# A risk undertaken with a potential gain. A significant risk is implied
-# A risky venture
+# A [[risk]] undertaken with a potential gain. A significant risk is implied
+# A risky [[venture]]
 #: The sailors had taken many '''gambles''' ''(plural)'' with the sea and always won.
 
 ====Translations====
 {{trans-top|a risk undertaken with a potential gain}}
+* Dutch: [[gok]] {{m}}
 * German: {{t+|de|Glücksspiel|n}}
 * Japanese: [[賭け]] ([[かけ]], kake), [[ギャンブル]] (gyanburu)
 {{trans-mid}}
@@ -22,15 +26,15 @@
 {{trans-bottom}}
 
 {{trans-top|a risky venture}}
+* Dutch: [[gok]] {{m}}, waagstuk {{n}}
 * German: {{t+|de|Glücksspiel|n}}
 {{trans-mid}}
 * Japanese: [[賭け]] ([[かけ]], kake), [[ギャンブル]] (gyanburu)
 {{trans-bottom}}
 
 {{checktrans-top}}
-* {{ttbc|Dutch}}: [[gok]] {{m}}
-{{checktrans-mid}}
 * {{ttbc|Interlingua}}: [[joco]]
+{{checktrans-mid}}
 * {{ttbc|Portuguese}}: [[jogo]] {{m}}
 {{checktrans-bottom}}
 
@@ -38,13 +42,14 @@
 {{en-verb|gambl|ing}}
 
 # To take a risk, with the potential of a positive outcome.
-# To play risky games, especially [[casino]] games, for monetary gain.
-# {{transitive}} To risk (something) for potential gain.
+# To play risky [[game]]s, especially [[casino]] games, for monetary gain.
+# {{transitive}} To [[risk]] (something) for potential gain.
 #: ''He '''gambled''' his reputation on the outcome.''
 
 ====Translations====
 {{trans-top|to take a risk, with the potential of a positive outcome}}
 * Croatian: {{t|hr|kockati|alt=kȍckati se}}
+* Dutch: [[gokken]]
 * German: {{t-|de|riskant}} {{t+|de|spielen}}, {{t-|de|spekulieren}}, {{slang}} {{t+|de|zocken}}
 {{trans-mid}}
 * Hebrew: {{t+|he|להמר|sc=Hebr}}
@@ -53,6 +58,7 @@
 
 {{trans-top|to play casino games}}
 * Croatian: {{t|hr|kockati|alt=kȍckati se}}
+* Dutch: [[gokken]], [[kansspel]]en bedrijven
 * German: {{t-|de|wetten}}, {{t+|de|spielen}}, {{slang}} {{t+|de|zocken}}
 {{trans-mid}}
 * Hebrew: {{t+|he|להמר|sc=Hebr}}
@@ -60,6 +66,7 @@
 {{trans-bottom}}
 
 {{trans-top|''(transitive)'' to risk something for potential gain}}
+* Dutch: [[vergokken]], [[wagen]]
 * German: aufs {{t+|de|Spiel|n}} {{t+|de|setzen}}
 * [[Interlingua]]: [[poner]] in [[risco]]
 {{trans-mid}}
@@ -69,9 +76,8 @@
 
 <!--intransitive? both? In English, the 1st and 3rd are not distinct senses. -->
 {{checktrans-top}}
-* {{ttbc|Dutch}}: [[gokken]]
-{{checktrans-mid}}
 * {{ttbc|Interlingua}}: [[jocar]]
+{{checktrans-mid}}
 * {{ttbc|Portuguese}}: [[jogar]]
 {{checktrans-bottom}}
 
