convert OE. to etyl|ang <bind#5487228>

--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-From {{OE.}} ''[[bindan]]''.
+From {{etyl|ang}} ''[[bindan]]''.
 
 ===Pronunciation===
 * {{IPA|/bʌɪnd/}}
