/* Translations */ +pl <blow#5490119>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -57,7 +57,8 @@ From {{etyl|ang}} {{term|blawan||make an air current, sound a wind instrument|la
 * Korean: [[불다]] (bulda)
 {{trans-mid}}
 * Kurdish: {{KUchar|[[فو]]}}
-* Português: [[assoprar]]
+* Polish: [[dmuchać]]
+* Portuguese: [[assoprar]]
 * Russian: [[дуть]] (dut') {{impf}}, [[дунуть]] (dúnut') {{pf}}; [[сморкаться]] (smorkát's'a) {{impf}}, [[сморкнуться]] (smorknút's'a) {{pf}} ''blow the nose''
 * [[Scottish Gaelic]]: [[séid]]
 * Slovene: [[pihati]]
@@ -84,7 +85,7 @@ From {{etyl|ang}} {{term|blawan||make an air current, sound a wind instrument|la
 {{trans-mid}}
 * Japanese: [[爆発]]する ([[ばくはつ]]する, bakuhatsu-suru)
 * Korean: [[터지다]] (teojida)
-* Português: [[explodir]]
+* Portuguese: [[explodir]]
 * Russian: [[взрываться]] (vzryvát's'a) {{impf}}, [[взорваться]] (vzorvát's'a) {{pf}}, [[взлетать на воздух]] (vzletát' na vózduχ) {{impf}}, [[взлететь на воздух]] (vzlet'ét' na vózduχ) {{pf}}
 * Vietnamese: [[nổ]]
 {{trans-bottom}}
@@ -113,6 +114,7 @@ From {{etyl|ang}} {{term|blawan||make an air current, sound a wind instrument|la
 * German: [[blasen]], [[wegblasen]], [[fortblasen]], [[hinfortblasen]], [[pusten]], [[wegpusten]]
 {{trans-mid}}
 * Korean: [[불다]] (bulda)
+* Polish: [[zdmuchnąć]]
 * Russian: [[сдувать]] (sduvát') {{impf}}, [[сдуть]] (sdut') {{pf}}
 * Vietnamese: [[thở]], [[thổi]]
 {{trans-bottom}}
