--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -49,7 +49,7 @@
 
 ====Synonyms====
 * (''agreement''): [[yep]], [[yup]]
-* (''joy''): [[hurrah]], [[hurray]], [[yay]], [[yippee]] <!--etc-->
+* (''joy''): [[hurrah]], [[hurray]], [[yay]], [[yippee]], [[woohoo]] <!--etc-->
 
 ====Translations====
 {{trans-top|expressing agreement}}
