--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -39,7 +39,7 @@ From {{etyl|xno}} ''[[esquirel]]'', from {{etyl|fro}} ''[[escurel]]'' (modern {{
 * Faroese: [[íkorni]]
 * Finnish: [[orava]]
 * French: [[écureuil]] {{m}}
-* [[Friulian]]: [[sghirat]], [[sghirate]] {{g|Friulian}}
+* [[Friulian]]: [[sghirat]] {{m}}, [[sghirate]] {{g|Friulian}}
 * [[Galician]]: [[esquío]] {{m}}
 * German: [[Eichhörnchen]] {{n}}, [[Hörnchen]] {{n}}
 * Greek: [[σκίουρος]] (skiouros) {{m}}
@@ -70,7 +70,7 @@ From {{etyl|xno}} ''[[esquirel]]'', from {{etyl|fro}} ''[[escurel]]'' (modern {{
 * [[Romani]]: [[viaveritsa]] {{f}}
 * Romanian: [[veveriţă]] {{f}}
 * [[Romansh]]: [[stgilat]] {{m}}
-* Russian: [[белка]] (bélka) {{f}}
+* Russian: {{t|ru|белка|tr=bélka|f}}
 * [[Sami]]: [[oarri]]
 * [[Sardinian]]: [[schirrittu]] {{m}}, [[schirrimatta]] {{f}}, [[iscojàttulu]] {{m}}
 * Scottish: [[feòrag]]
@@ -92,7 +92,7 @@ From {{etyl|xno}} ''[[esquirel]]'', from {{etyl|fro}} ''[[escurel]]'' (modern {{
 {{trans-bottom}}
 
 {{checktrans}}
-* {{ttbc|Mandarin}}: [[灰鼠]]
+* {{ttbc|Mandarin}}: [[灰鼠]] (huīshǔ)
 
 ====Derived terms====
 * [[gray squirrel]]
