convert F. to etyl|fr <guilloche#5500365>

--- a/en/g/guilloche.855171.wikitext
+++ b/en/g/guilloche.855171.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 
 ===Etymology===
-From {{F.}} {{term|guilloche#French|guilloche}}.
+From {{etyl|fr}} {{term|guilloche#French|guilloche}}.
 
 ===Pronunciation===
 * {{IPA|/gɪˈlɒʃ/}}
