--- a/en/c/countdown.34096.wikitext
+++ b/en/c/countdown.34096.wikitext
@@ -17,6 +17,7 @@
 *Chinese:
 *:Mandarin: {{zh-ts|[[倒]][[數]]|[[倒]][[数]]}} ([[dào]][[shǔ]])
 *Finnish: [[lähtölaskenta]]
+*French: {{t+|fr|compte à rebours|m}}
 *German: {{t+|de|Countdown|m}}
 *Hebrew: [[ספירה לאחור]] (sfira le'akhor) {{f}}
 {{trans-mid}}
