--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -23,6 +23,7 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 * Finnish: [[kertolasku]]
 * French: multiplication {{f}}
 * German: [[Multiplikation]] {{f}}
+* Greek: {{t+|el|πολλαπλασιασμός}}
 {{trans-mid}}
 * Italian: [[moltiplicazione]] {{f}}
 * Japanese: [[掛け算]] (かけざん, kakezan), [[乗法]] (じょうほう, jōhō)
