--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|fro}} ''[[atendre]]'' ({{etyl|fr}} ''[[attendre]]'').
+From {{etyl|fro}} {{term|atendre}} < {{L.}} {{term|attendere||to stretch toward, give heed to}} < {{term|ad||to}} + {{term|tendere||to stretch}}; see [[tend]] and cf. [[attempt]].
 
 ===Pronunciation===
 * {{audio|en-us-attend.ogg|Audio (US)}}
@@ -16,6 +16,9 @@ From {{etyl|fro}} ''[[atendre]]'' ({{etyl|fr}} ''[[attendre]]'').
 
 ====Derived terms====
 * [[attend to]]
+
+====Related terms====
+* [[attention]]
 
 ====Translations====
 {{trans-top|to be at an event}}
