--- a/en/m/micro.34067.wikitext
+++ b/en/m/micro.34067.wikitext
@@ -22,7 +22,17 @@ MY-kro
 
 ==French==
 
-[
+===Noun===
+{{fr-noun|m}}
+
+# [[mic]] (microphone)
+# [[micro#English|micro]] (microcomputer)
+
+[[es:micro]]
+[[fr:micro]]
+[[it:micro]]
+[[pl:micro]]
+[[pt:micro]]
 [[ru:micro]]
 [[fi:micro]]
 [[ta:micro]]
