make page count: add link in {{alternative spelling of}}, template -see +also <fufu#5517848>

--- a/en/f/fufu.855764.wikitext
+++ b/en/f/fufu.855764.wikitext
@@ -1,8 +1,7 @@
-{{see|fufú}}
-
+{{also|fufú}}
 ==English==
 
 ===Noun===
 {{en-noun|-}}
 
-#{{alternative spelling of|foo-foo}}
+# {{alternative spelling of|[[foo-foo]]}}
