/* Pronunciation */ add IPA, formatting <octillion#5522968>

--- a/en/o/octillion.34109.wikitext
+++ b/en/o/octillion.34109.wikitext
@@ -4,10 +4,9 @@
 From the prefix ''[[oct-]]'' (''eight'') + ''[[-illion]]'' (from [[million]]); [[ie]] the eighth [[power]] of a million, 10<sup>48</sup>.
 
 ===Pronunciation===
-{{rfp}}
-* {{SAMPA|/QktIli@n/}}
-* Hyphenation: oct-il-li-on, oc-til-li-on
+* {{a|UK}} {{IPA|/ɒkˈtɪl.iː.ən/}}, {{SAMPA|/Qk"tIl.i:.@n/}}
 *: {{rhymes|ɪljən}}
+* {{hyphenation|oct|il|li|on, oc|til|li|on}}
 
 ===Cardinal number===
 '''octillion'''
