trans link [[Romansch]] <polecat#5527728>

--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -54,7 +54,7 @@ Middle French ''[[pole]]'' [[hen]] + [[cat]] because of its fondness for poultry
 * Polish: {{t+|pl|tchórz}}
 * Portuguese: [[toirăo]]
 * Romanian: [[dihor]]
-* Romansch: [[telpi]]
+* [[Romansch]]: [[telpi]]
 * Romany: [[mutsa-kandini]] {{f}}
 * Russian: {{t+|ru|хорёк|sc=Cyrl}} (hor'ók) {{m}}, [[хорь]] (hor') {{m}}
 * [[Sami]]: [[čáhppesbuoidda]]
