--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -28,7 +28,7 @@ Middle French ''[[pole]]'' [[hen]] + [[cat]] because of its fondness for poultry
 * Bulgarian: [[прът]] (pr"t)
 * [[Catalan]]: [[turó]]
 * Croatian: {{t+|hr|tvor}}
-* Czech: {{t+|cs|tchoř}}
+* Czech: {{t+|cs|tchoř|m}}
 * Danish: [[ilder]]
 * Dutch: {{t+|nl|bunzing|m}}
 * Esperanto: [[putoro]]
