--- a/en/c/consonance.746531.wikitext
+++ b/en/c/consonance.746531.wikitext
@@ -1,21 +1,14 @@
-==English==
+{{merge|consonance}}
+[[Category:Move to Wiktionary 2007-09]]
+'''Consonance''' 
 
-===Noun===
-{{en-noun}}
+is the repition of consonant sounds, but not vowels as in [[assonance]]
 
-# {{music}} [[harmony]]; [[agreement]]; lack of [[discordance]]
+Examples:
+lady lounges lazily , dark deep dread crept in 
 
-====Translations====
-{{trans-top|consonance}}
-* Italian: {{t+|it|consonanza|f}}
-{{trans-mid}}
-{{trans-bottom}}
+* for consonance in music, see [[Consonance and dissonance]]
 
-[[fr:consonance]]
-[[io:consonance]]
-[[ru:consonance]]
-[[ta:consonance]]
-[[te:consonance]]
-[[vi:consonance]]
-[[tr:consonance]]
-[[zh:consonance]]
+
+== References ==
+[http://olc.lcs.on.ca/English/ETS4Ue.Nsf/5f78f7e68f1c4d30852565960008af71/bb7e8c258996458385256d8f00486f1e?OpenDocument Lakefield College School Key Literary Terms]
