--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -88,7 +88,7 @@
 * {{audio|La-species.OGG|audio}}
 
 ===Noun===
-{{infl|la|noun|head=spĕcĭēs|gender=f|genitive|[[speciei|spĕciēī]]}}
+{{infl|la|noun|head=speciēs|gender=f|genitive|[[speciei|speciēī]]}}
 
 # [[view]]; [[appearance]]; [[vision]]; [[dream]]; [[semblance]]
 
