make page count: add link in {{alternative spelling of}} <whatevz#5541237>

--- a/en/w/whatevz.803480.wikitext
+++ b/en/w/whatevz.803480.wikitext
@@ -1,5 +1,6 @@
 ==English==
+
 ===Interjection===
 '''whatevz'''
 
-# {{alternative spelling of|whatevs}}
+# {{alternative spelling of|[[whatevs]]}}
