--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -27,6 +27,7 @@
 ====Translations====
 {{trans-top|sound made by a duck}}
 * Dutch: {{t+|nl|kwak}}
+* Estonian: [[prääks]]
 * Faroese: [[gvagg]], [[kvagg]]
 * Finnish: {{t-|fi|kvaak}}
 * French: {{t+|fr|coin-coin}}
