--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -20,18 +20,26 @@ Via {{etyl|xno}} from {{etyl|la}} {{term|senior||[[older]], [[elder]]|lang=la}},
 # An address to any [[male]], especially if his [[name]] or proper [[address]] is unknown.
 #: ''Excuse me, '''sir''', could you tell me where the nearest bookstore is?''
 
+====Derived terms====
+* [[sirree]]
+
+====Related terms====
+* [[senior]]
+* [[senex]]
+* [[senate]]
+
 ====Translations====
-{{trans-top|A man of a higher rank or position}}
+{{trans-top| man of a higher rank or position}}
 * Dutch: [[heer]] {{m}}, [[meneer]] {{m}}
 {{trans-mid}}
 {{trans-bottom}}
 
-{{trans-top|An address to a military superior}}
+{{trans-top|address to a military superior}}
 * Dutch: [[meneer]] {{m}}
 {{trans-mid}}
 {{trans-bottom}}
 
-{{trans-top|An address to any male, especially if his name or proper address is unknown}}
+{{trans-top|address to any male, especially if his name or proper address is unknown}}
 * Dutch: [[meneer]] {{m}}, [[mijnheer]] {{m}}
 {{trans-mid}}
 * Kurdish: {{KUchar|[[کاک]]}}
@@ -52,9 +60,6 @@ Via {{etyl|xno}} from {{etyl|la}} {{term|senior||[[older]], [[elder]]|lang=la}},
 * {{ttbc|Spanish}}: [[señor]] {{m}}
 {{trans-bottom}}
 
-====Derived terms====
-* [[sirree]]
-
 ===Verb===
 {{en-verb}}
 
@@ -66,8 +71,6 @@ Via {{etyl|xno}} from {{etyl|la}} {{term|senior||[[older]], [[elder]]|lang=la}},
 * [[lord]]
 * [[madam]], [[ma'am]], [[mam]]
 * [[mister]]
-* [[senior]]
-* [[senex]]
 
 ----
 
