gender -f +|f, sorted/rebalanced translations <pig#5557549>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -134,10 +134,10 @@
 
 {{trans-top|someone who overeats or eats rapidly}}
 * [[Afrikaans]]: [[vark]]
-* Dutch: {{t|nl|varken|n}}, {{t|nl|zwijn|n}}, {{t|nl|slokop|mf}}
+* Dutch: {{t|nl|varken|n}}, {{t|nl|zwijn|n}}, {{t|nl|slokop|m|f}}
 * Finnish: {{t|fi|porsas}}, {{t|fi|sika}}
-* French: [[cochon]] {{m}}, [[porc#French|porc]] {{m}}
 {{trans-mid}}
+* French: [[cochon]] {{m}}, [[porc#French|porc]] {{m}}
 * Italian: [[porco]] {{m}}, [[maiale]] {{m}}
 * Welsh: {{t|cy|mochyn|m}}
 {{trans-bottom}}
@@ -150,8 +150,8 @@
 * French: [[salaud]] {{m}}, [[cochon]] {{m}}, [[porc#French|porc]] {{m}}
 * German: [[Schwein]] {{n}}
 * Italian: [[bastardo]] {{m}}, bastarda {{f}}, [[stronzo]] {{m}}, stronza {{f}}
-* Latvian: [[cūka]] {{f}}
 {{trans-mid}}
+* Latvian: [[cūka]] {{f}}
 * Russian: [[свинья]] (svin’já) {{f}}
 * Serbian:
 *: Cyrillic: [[свиња#Serbian|свиња]] {{f}}
@@ -168,8 +168,8 @@
 * French: [[cochon]] {{m}}, [[porc#French|porc]] {{m}}
 * German: [[Schwein]] {{n}}
 * Italian: [[porco]] {{m}}, [[maiale]] {{m}}
-* Latvian: [[cūka]] {{f}}
 {{trans-mid}}
+* Latvian: [[cūka]] {{f}}
 * Russian: [[свинья]] (svin’já) {{f}}, [[свинтус]] (svítus) {{m}}
 * Serbian:
 *: Cyrillic: [[свиња#Serbian|свиња]] {{f}}
