/* English */ *etymology from Century 1911 <sir#5557584>

--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -3,7 +3,7 @@
 ==English==
 
 ===Etymology===
-Via {{etyl|xno}} from {{etyl|la}} {{term|senior||[[older]], [[elder]]|lang=la}}, from {{term|senex||old|lang=la}}
+< {{ME.}} {{term|sir|lang=enm}} < {{OF.}} {{term|sire||master, sir, lord}} <  {{etyl|la}} {{term|senior||[[older]], [[elder]]|lang=la}} < {{term|senex||old|lang=la}}. Cf. [[sire]], [[signor]], [[seignior]], [[señor]].
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/sɜː(ɹ)/}}, {{SAMPA|/s3:(r)/}}
@@ -71,6 +71,10 @@ Via {{etyl|xno}} from {{etyl|la}} {{term|senior||[[older]], [[elder]]|lang=la}},
 * [[lord]]
 * [[madam]], [[ma'am]], [[mam]]
 * [[mister]]
+
+===External links===
+* {{R:Webster 1913}}
+* {{R:Century 1911}}
 
 ----
 
