--- a/en/c/countdown.34096.wikitext
+++ b/en/c/countdown.34096.wikitext
@@ -5,50 +5,56 @@
 *[[count down]]
 *[[count-down]]
 
+===Etymology===
+to [[count]] + [[down]]
+
 ===Noun===
 {{en-noun}}
 
-# A [[count]] [[backward]] to the [[time]] of some [[event]], especially the [[launch]] of a [[space]] [[vehicle]]
+# A [[count]] [[backward]] in fixed units to the [[time]] of some [[event]], especially the [[launch]] of a [[space]] [[vehicle]]
 # The acts of [[preparation]] carried out during this period
 # {{slang}} A radio or television program counting down the top songs of a given week, usually in reverse order and ending with the No. 1 song.
 
 ====Translations====
 {{trans-top|A count backward to the time of some event}}
-*Chinese:
+* Chinese:
 *:Mandarin: {{zh-ts|[[倒]][[數]]|[[倒]][[数]]}} ([[dào]][[shǔ]])
-*Finnish: [[lähtölaskenta]]
-*French: {{t+|fr|compte à rebours|m}}
-*German: {{t+|de|Countdown|m}}
-*Hebrew: [[ספירה לאחור]] (sfira le'akhor) {{f}}
+* Dutch: [[aftelling]] {{f}}, [[aftellen]] {{n}}
+* Finnish: [[lähtölaskenta]]
+* French: {{t+|fr|compte à rebours|m}}
+* German: {{t+|de|Countdown|m}}
+* Hebrew: [[ספירה לאחור]] (sfira le'akhor) {{f}}
 {{trans-mid}}
-*Russian: [[обратный отсчёт]] (obrátnyj otš'ót) {{m}}
-*Slovene: [[odštevanje]] {{n}}
-*Spanish: [[cuenta atrás]] {{f}} {{italbrac|Spain}}, [[cuenta regresiva]] {{f}} {{italbrac|Latin America}}
-*Swedish: [[nedräkning]] {{c}}
+* Russian: [[обратный отсчёт]] (obrátnyj otš'ót) {{m}}
+* Slovene: [[odštevanje]] {{n}}
+* Spanish: [[cuenta atrás]] {{f}} {{italbrac|Spain}}, [[cuenta regresiva]] {{f}} {{italbrac|Latin America}}
+* Swedish: [[nedräkning]] {{c}}
 {{trans-bottom}}
 
 {{trans-top|The acts of preparation carried out during this period}}
+* Dutch: [[aftelling]] {{f}}
 * German: {{t+|de|Zeitkontrolle|f}}
-*Portuguese: [[contagem regressiva]], [[retrocontagem]] {{f}}
+* Portuguese: [[contagem regressiva]], [[retrocontagem]] {{f}}
 {{trans-mid}}
-*Russian: [[обратный отсчёт]] (obrátnyj otš'ót) {{m}}
+* Russian: [[обратный отсчёт]] (obrátnyj otš'ót) {{m}}
 {{trans-bottom}}
 
 {{trans-top|A radio or television program counting down the top songs of a given week}}
-*German: {{t+|de|Countdown|m}}
+* German: {{t+|de|Countdown|m}}
 {{trans-mid}}
 {{trans-bottom}}
 
-{{checktrans-top}}
-*{{ttbc|Dutch}}: [[aftelling]] {{f}}
-{{trans-mid}}
 
-;to count down (nonsense - nonstandard)
-*Chinese:
+===Verb===
+to count down (nonsense - nonstandard)
+
+====Translations====
+{{trans-top|to count down}}
+* Chinese:
 *:Mandarin: {{zh-ts|[[倒]][[數]]|[[倒]][[数]]}} ([[dào]][[shǔ]])
-*Dutch: [[aftellen]]
-*Portuguese: [[fazer]] a [[contagem regressiva]]
-*Slovene: [[odštevati]]
+* Dutch: [[aftellen]]
+* Portuguese: [[fazer]] a [[contagem regressiva]]
+* Slovene: [[odštevati]]
 {{trans-bottom}}
 
 [[Category:Time]]
