/* Noun */ Is "hillman" a word? (I can only find "Hillman") <Pahari#5564557>

--- a/en/p/Pahari.741411.wikitext
+++ b/en/p/Pahari.741411.wikitext
@@ -9,7 +9,7 @@ From Hindi.
 ===Noun===
 {{en-noun|pl2=Pahari}}
 
-# In South Asia, someone from the [[hills]], a [[hillman]]; specifically a member of any of various peoples living in the Himalayan regions of India and Nepal.
+# In South Asia, someone from the [[hills]], a [[hill]]-[[man]]; specifically a member of any of various peoples living in the Himalayan regions of India and Nepal.
 # Any of various Indo-European languages spoken by the Paharis, including [[Nepali]]; this group of languages or dialects considered as a whole.
 
 ===Adjective===
