--- a/en/i/incommunicable.741075.wikitext
+++ b/en/i/incommunicable.741075.wikitext
@@ -4,7 +4,7 @@
 {{en-adj}}
 
 # {{context|of a disease etc}} That cannot be [[communicated]] or [[transmitted]]
-# {{context|of a person}} Who does not [[communicate]] freely; [[incommunicative]] or [[reserved]]
+# {{context|of a person}} Who does not [[communicate]] freely; [[uncommunicative]] or [[reserved]]
 
 [[fr:incommunicable]]
 [[io:incommunicable]]
