/* Etymology 2 */ +etymology from Century 1911 <bound#5581821>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -34,6 +34,7 @@ obliged to
 * French: [[obligé]], [[tenu]]
 
 ===Etymology 2===
+< {{ME.}} {{term|bounde}} < {{OF.}} {{term|bunne}} < {{ML.}} {{term|bodina}}, earlier {{term|butina||a bound, limit}}
 
 ====Noun====
 {{en-noun}}
