--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -34,7 +34,7 @@ obliged to
 * French: [[obligé]], [[tenu]]
 
 ===Etymology 2===
-< {{ME.}} {{term|bounde}} < {{OF.}} {{term|bunne}} < {{ML.}} {{term|bodina}}, earlier {{term|butina||a bound, limit}}
+< {{etyl|enm}} {{term|bounde}} < {{etyl|fro}} {{term|bunne}} < {{ML.}} {{term|bodina}}, earlier {{term|butina||a bound, limit}}
 
 ====Noun====
 {{en-noun}}
@@ -113,7 +113,7 @@ obliged to
 {{trans-bottom}}
 
 ===Etymology 3===
-< {{F.}} {{term|bondir||to leap, bound, orig. make a loud resounding noise}}; perhaps < {{LL.}} {{term|bombitare||to hum, buzz}}, freq. verb < {{L.}} {{term|bombus||a humming or buzzing}}.
+< {{etyl|fr}} {{term|bondir||to leap, bound, orig. make a loud resounding noise}}; perhaps < {{LL.}} {{term|bombitare||to hum, buzz}}, freq. verb < {{etyl|la}} {{term|bombus||a humming or buzzing}}.
 
 ====Noun====
 {{en-noun}}
