--- a/en/l/Las Vegas.741384.wikitext
+++ b/en/l/Las Vegas.741384.wikitext
@@ -7,7 +7,11 @@ From {{etyl|es}} ''[[las]] [[vegas]]'' 'the meadows'
 ===Proper noun===
 {{en-proper-noun}}
 
-# A desert city in [[Nevada]], USA, known for its large
-----
-a fun place for kids not adults but kids to play and no trouble at all and you can go to school anytime!!!
+# A desert city in [[Nevada]], USA, known for its large hotels, extravagant entertainment and dining, and [[gambling]].
+
+====Synonyms====
+* [[Vegas]]
+* [[Sin City]]
+* [[The Strip]]
+
 [[Category:Cities]]
