--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -21,10 +21,11 @@ From {{etyl|enm}}, from {{etyl|ang}} ''[[þing#Old English|þing]]''.
 # {{legal}} whatever can be [[owned]].
 # the [[latest]] [[fad]] or [[fashion]].
 # {{in plural}} [[clothes]], [[possessions]] or [[equipment]].
-# A unit.
+# {{informal}} A unit.
 #: ''Get me a thing of [[apple juice]] at the store.''
 # In [[Scandinavian]] countries, a [[legislative]] or [[judicial]] [[assembly]].
 # ''(in certain fixed expressions)'' A [[problem]], [[dilemma]], or [[complicating]] [[factor]].
+#: ''The car looks cheap, but the thing is, I have doubts about its safety.''
 # {{context|U.S. slang}} A [[penis]].
 
 ====Quotations====
