--- a/en/p/pusillanimity.741240.wikitext
+++ b/en/p/pusillanimity.741240.wikitext
@@ -1,7 +1,11 @@
 ==English==
+===Etymology===
+from the ecclesiastical {{etyl|la}} ''[[ pusillanimis]]'', from ''[[pusillus]]'' (very small) + ''[[animus]] (mind) + ''[[-ous]]. A translation of the {{etyl|gr}} ''[[olugopsukhos]]''. {{rfscript|Greek}}
+
 ===Noun===
-'''pusillanimity'''
-# The quality or state of being [[pusillanimous]]; [[pusillanimousness]].
+{{en-noun}}
+
+# The quality or state of being [[pusillanimous]];  the [[vice]] of being [[timid]] and [[cowardly]], and thus not living up to one's full [[potential]]; [[pusillanimousness]].
 * '''1685'''.  [[w:Miguel de Molinos|Dr. Michael de Molinos]]: ''The Spiritual Guide which Disentangles the Soul, and Brings it by the Inward Way To The Getting of Perfect Contemplation and the Rich Treasure of Internal Peace'', CHAP. XVIII: [http://www.ccel.org/ccel/molinos/guide.html].
 *:132. And although thou often fallest, and seest thy '''Pusillanimity''', and endeavour to get courage, and afflict not thy self; because what God doth not do in forty Years, he sometimes doth in an instant, with a particular Mystery, that we may live low and humble, and know that ‘tis the Work of his powerful Hand, to free us from Sins.
 
