--- a/en/p/pusillanimity.741240.wikitext
+++ b/en/p/pusillanimity.741240.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From the ecclesiastical {{etyl|la}} ''[[ pusillanimis]]'', from ''[[pusillus]]'' (very small) + ''[[animus]] (mind) + ''[[-ous]]. A translation of the {{etyl|gr}} ''[[olugopsukhos]]''. {{rfscript|Greek}}
+From the ecclesiastical {{etyl|la}} ''[[pusillanimis]]'', from ''[[pusillus]]'' (very small) + ''[[animus]] (mind) + ''[[-ous]]. A translation of the Greek ''[[olugopsukhos]]''. {{rfscript|Greek}}
 
 ===Noun===
 {{en-noun|pusillanimities}}
