--- a/en/c/consonance.746531.wikitext
+++ b/en/c/consonance.746531.wikitext
@@ -1,14 +1,34 @@
-{{merge|consonance}}
-[[Category:Move to Wiktionary 2007-09]]
-'''Consonance''' 
+==English==
 
-is the repition of consonant sounds, but not vowels as in [[assonance]]
+===Noun===
+{{en-noun}}
 
-Examples:
-lady lounges lazily , dark deep dread crept in 
+# The [[repetition]] of [[consonant]] [[sounds]], but not [[vowels]] as in [[assonance]].
+#:Examples: lady lounges lazily , dark deep dread crept in
+# {{music}} [[harmony]]; [[agreement]]; lack of [[discordance]]
 
-* for consonance in music, see [[Consonance and dissonance]]
+====Translations====
+{{trans-top|the repetition of consonant sounds}}
+{{trans-mid}}
+{{trans-bottom}}
 
+{{trans-top|music harmony; agreement}}
+* Italian: {{t+|it|consonanza|f}}
+{{trans-mid}}
+{{trans-bottom}}
 
-== References ==
-[http://olc.lcs.on.ca/English/ETS4Ue.Nsf/5f78f7e68f1c4d30852565960008af71/bb7e8c258996458385256d8f00486f1e?OpenDocument Lakefield College School Key Literary Terms]
+====Antonyms====
+*[[dissonance]]
+*[[discordance]]
+
+===References===
+*[http://olc.lcs.on.ca/English/ETS4Ue.Nsf/5f78f7e68f1c4d30852565960008af71/bb7e8c258996458385256d8f00486f1e?OpenDocument Lakefield College School Key Literary Terms]
+
+[[fr:consonance]]
+[[io:consonance]]
+[[ru:consonance]]
+[[ta:consonance]]
+[[te:consonance]]
+[[vi:consonance]]
+[[tr:consonance]]
+[[zh:consonance]]
