/* Noun */ <irregular galaxy#5589079>

--- a/en/i/irregular galaxy.802551.wikitext
+++ b/en/i/irregular galaxy.802551.wikitext
@@ -4,7 +4,7 @@
 {{wikipedia}}
 {{en-noun|sg=[[irregular]] [[galaxy]]|irregular galaxies}}
 
-# {{astronomy}} A [[galaxy]] which is has no [[spiral]]s or is [[elliptical]].
+# {{astronomy}} A [[galaxy]] which is has no [[spiral]]s and is not [[elliptical]].
 #:''The Magellanic Clouds are '''irregular galaxies'''.''
 
 ====Derived terms====
